--- a/xspec/recipe.yaml
+++ b/xspec/recipe.yaml
@@ -17,6 +17,12 @@ source:
     - gsl_configure.patch
     - pgplot_makemake.patch
     - xspec_configure.patch
+    - heainit.patch
+    - heaev_Makefile.patch
+    - xsmix_Makefile.patch
+    - heasp_python_Makefile.patch
+    - pyxspec_Makefile.patch
+    - mxspec_Makefile.patch
 
 build:
   number: 0
