--- a/heasoft/recipe.yaml
+++ b/heasoft/recipe.yaml
@@ -21,6 +21,17 @@ source:
     - xsmix_Makefile.patch
     - tcltk_Makefile.patch
     - pgplot_makefile_pl.patch
+    - pow_makefile.patch
+    - xdf_makefile.patch
+    - fitstcl_makefile.patch
+    - hitomi_expmap_makefile.patch
+    - hitomi_mktim_makefile.patch
+    - hitomi_timeassign_makefile.patch
+    - hitomi_trendtemp_makefile.patch
+    - hitomi_sxsrsl_makefile.patch
+    - hitomi_calanticopi_makefile.patch
+    - hitomi_calbranch_makefile.patch
+    - hitomi_ccdphas_makefile.patch
     - heasp_python_Makefile.patch
     - pyxspec_Makefile.patch
     - mxspec_Makefile.patch
