--- a/heasoft/recipe.yaml
+++ b/heasoft/recipe.yaml
@@ -25,7 +25,6 @@ source:
 
 build:
   number: 0
-  always_include_files: "*"
 
 requirements:
   build:
@@ -51,7 +50,8 @@ requirements:
     - pip
     - setuptools
     - numpy
-    - astropy
+    - scipy
+    - astropy-base
     - matplotlib
   run:
     - libcurl
@@ -66,7 +66,8 @@ requirements:
     - fgsl
     - perl
     - numpy
-    - astropy
+    - scipy
+    - astropy-base
     - matplotlib
     - xspec-data = ${{ version }}
 
