fix xspec version in heasoft

--- a/heasoft/recipe.yaml
+++ b/heasoft/recipe.yaml
@@ -69,7 +69,7 @@ requirements:
     - scipy
     - astropy-base
     - matplotlib
-    - xspec-data = 12.14.1
+    - xspec-data = ${{ version }}
 
 about:
   homepage: https://heasarc.gsfc.nasa.gov/docs/software/lheasoft/
