add configures.path to fix perl issues in osx-64

--- a/heasoft/recipe.yaml
+++ b/heasoft/recipe.yaml
@@ -18,6 +18,7 @@ source:
     - xspec.patch
     - zlib_makefiles.patch
     - python_makefiles.patch
+    - configures.patch
 
 build:
   number: 0
