--- a/heasoft/recipe.yaml
+++ b/heasoft/recipe.yaml
@@ -19,6 +19,7 @@ source:
     - zlib_makefiles.patch
     - python_makefiles.patch
     - configures.patch
+    - wcslib_tclrl.patch
 
 build:
   number: 0
@@ -64,6 +65,9 @@ requirements:
     - astropy-base
     - matplotlib
     - xspec-data = ${{ version }}
+    - if: linux or (osx and not arm64)
+      then:
+        - lynx
 
 about:
   homepage: https://heasarc.gsfc.nasa.gov/docs/software/lheasoft/
