add patches to heasoft-tests

--- a/heasoft-tests/recipe.yaml
+++ b/heasoft-tests/recipe.yaml
@@ -17,6 +17,8 @@ source:
     - ../heasoft/xspec.patch
     - ../heasoft/zlib_makefiles.patch
     - ../heasoft/python_makefiles.patch
+    - ../heasoft/configures.patch
+    - ../heasoft/wcslib_tclrl.patch
 
 build:
   number: 0
