--- a/heasoft/recipe.yaml
+++ b/heasoft/recipe.yaml
@@ -18,13 +18,14 @@ source:
     - xspec.patch
     - zlib_makefiles.patch
     - python_makefiles.patch
+    - heauninit.patch
     - if: osx
       then:
       - configures.patch
       - wcslib_tclrl.patch
 
 build:
-  number: 0
+  number: 1
 
 requirements:
   host:
