add pgplot patch for xspec arm64; fix headas-un*.

--- a/xspec/recipe.yaml
+++ b/xspec/recipe.yaml
@@ -24,6 +24,7 @@ source:
       then:
       - ../heasoft/configures.patch
       - ../heasoft/wcslib_tclrl.patch
+      - pgplot.patch
 
 build:
   number: 1
