--- a/xspec-compilers/recipe.yaml
+++ b/xspec-compilers/recipe.yaml
@@ -2,8 +2,7 @@
 
 context:
   name: xspec-compilers
-  version: 12.15.0
-  hea_version: 6.35
+  version: 12.15.0b
 
 package:
   name: ${{ name|lower }}
