--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,9 @@ jobs:
             platform: osx-arm64
           - os: macos-latest
             platform: osx-64
-    
-    - name: Skip noarch packages
+
+    steps:
+      - name: Skip noarch packages
         if: |
           (matrix.platform == 'osx-arm64' || matrix.platform == 'osx-64') &&
           (inputs.package == 'xspec-data' || inputs.package == 'xstar-data' )
