--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,15 @@ jobs:
           fi 
           cd $package
           rattler-build build --no-include-recipe --output-dir ../output
+          if [ $package == "heasoft" ]; then
+            echo "doing heasoft-tests too"
+            cd ../output/src_cache
+            root=`find -type d -name 'heasoft-*'`
+            ln -s ${root} ${root/heasoft/heasoft-tests}
+            ln -s ${root}.tar.gz ${root/heasoft/heasoft-tests}.tar.gz
+            cd ../../heasoft-tests
+            rattler-build build --no-include-recipe --output-dir ../output
+          fi
         shell: micromamba-shell {0}
 
 
