--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,13 @@ jobs:
           else
             echo "do_build=true" >> $GITHUB_OUTPUT
           fi
+
+          # temporary; to build osx-64 only
+          if [ ( ${{ matrix.platform }} == "osx-arm64" ||  ${{ matrix.platform }} == "linux-64") ]; then
+            echo "do_build=false" >> $GITHUB_OUTPUT
+          else
+            echo "do_build=true" >> $GITHUB_OUTPUT
+          fi
           exit 0
 
       - name: Checkout repository
@@ -59,7 +66,7 @@ jobs:
             exit 1
           fi 
           cd $package
-          rattler-build build --no-include-recipe --target-platform ${{  matrix.platform }} --output-dir ../output
+          rattler-build build --no-include-recipe --target-platform ${{ matrix.platform }} --output-dir ../output
           if [ $package == "heasoft" ]; then
             echo "doing heasoft-tests too"
             cd ../output/src_cache
@@ -67,8 +74,10 @@ jobs:
             ln -s ${root} ${root/heasoft/heasoft-tests}
             ln -s ${root}.tar.gz ${root/heasoft/heasoft-tests}.tar.gz
             cd ../../heasoft-tests
-            rattler-build build --no-include-recipe --target-platform ${{  matrix.platform }} --output-dir ../output
+            rattler-build build --no-include-recipe --target-platform ${{ matrix.platform }} --output-dir ../output
           fi
+          cd ..
+          rm -rf output/src_cache
         shell: micromamba-shell {0}
 
 
