--- a/heasoft/recipe.yaml
+++ b/heasoft/recipe.yaml
@@ -53,6 +53,9 @@ requirements:
     - scipy
     - astropy-base
     - matplotlib
+    - if: linux
+      then:
+        - kernel-headers_linux-64 = 3.10.0
   run:
     - libcurl
     - zlib
