--- a/xspec/recipe.yaml
+++ b/xspec/recipe.yaml
@@ -45,6 +45,9 @@ requirements:
     - xorg-libxcursor
     - fgsl
     - numpy
+    - if: linux
+      then:
+        - kernel-headers_linux-64 = 3.10.0
   run:
     - libcurl
     - zlib
