--- a/xspec/recipe.yaml
+++ b/xspec/recipe.yaml
@@ -24,6 +24,7 @@ source:
     - if: osx
       then:
       - ../heasoft/configures.patch
+    - ../heasoft/fix-x11-conda.patch
 
 build:
   number: 0
